--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,23 @@
       <div class="errors"></div>
       <table>
       <td>
+      <div class="showDescription"></div>
+    </td>
+    <td>
       <div class="showDefault"></div>
     </td>
     <td>
-      <div class="showShiny"></div>
-    </td>
+    <div class="showEvolution"></div>
+  </td>
+    <td>
+    <div class="showHabitat"></div>
+  </td>
+  <td>
+    <div class="showTypes"></div>
+  </td>
+  <td>
+    <div class="showMoves"></div>
+  </td>
       </table>
     </div>
   </body>
